// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Component should render avatar without height 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 80,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": 80,
      },
      undefined,
      undefined,
    ]
  }
  width={80}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0,0,0,0.2)",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        undefined,
      ]
    }
  >
    <TextElement
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0,0,0,0)",
            "color": "#ffffff",
            "fontSize": 40,
            "textAlign": "center",
          },
          Object {
            "color": "red",
          },
        ]
      }
    >
      avatar title
    </TextElement>
  </View>
</View>
`;

exports[`Avatar Component should render avatar without width 1`] = `
<View
  activeOpacity={0.7}
  height={90}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 90,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": 90,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0,0,0,0.2)",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        undefined,
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
        }
      }
      style={
        Array [
          Object {
            "height": 90,
            "width": 90,
          },
          undefined,
          Object {
            "backgroundColor": "peru",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Avatar Component should render large avatar 1`] = `
<View
  activeOpacity={0.7}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 75,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": 75,
      },
      Object {
        "borderRadius": 37.5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0,0,0,0.2)",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 37.5,
        },
        undefined,
      ]
    }
  >
    <Icon
      color="blue"
      name="name"
      raised={false}
      reverse={false}
      reverseColor="white"
      size={22}
      type="type"
      underlayColor="white"
    />
  </View>
</View>
`;

exports[`Avatar Component should render medium avatar 1`] = `
<View
  activeOpacity={0.7}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 50,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": 50,
      },
      Object {
        "borderRadius": 25,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0,0,0,0.2)",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 25,
        },
        undefined,
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
        }
      }
      style={
        Array [
          Object {
            "height": 50,
            "width": 50,
          },
          Object {
            "borderRadius": 25,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Avatar Component should render small avatar 1`] = `
<View
  activeOpacity={0.7}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 34,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": 34,
      },
      Object {
        "borderRadius": 17,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0,0,0,0.2)",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 17,
        },
        undefined,
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
        }
      }
      style={
        Array [
          Object {
            "height": 34,
            "width": 34,
          },
          Object {
            "borderRadius": 17,
          },
          Object {
            "backgroundColor": "peru",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Avatar Component should render without issues 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 34,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": 34,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0,0,0,0.2)",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        undefined,
        undefined,
      ]
    }
  />
</View>
`;

exports[`Avatar Component should render xlarge avatar 1`] = `
<View
  activeOpacity={0.7}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "height": 150,
        "paddingBottom": 10,
        "paddingRight": 10,
        "paddingTop": 10,
        "width": 150,
      },
      Object {
        "borderRadius": 75,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "rgba(0,0,0,0.2)",
          "bottom": 0,
          "flex": 1,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 75,
        },
        undefined,
      ]
    }
  >
    <TextElement
      style={
        Array [
          Object {
            "backgroundColor": "rgba(0,0,0,0)",
            "color": "#ffffff",
            "fontSize": 75,
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      avatar title
    </TextElement>
  </View>
</View>
`;
